<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/file_save_24"
        android:title="@string/menu_save_text" />
    <item
        android:id="@+id/menu_share_xctsk"
        android:icon="@drawable/outbox_alt_24"
        android:title="@string/menu_share_xctsk" />
    <item
        android:id="@+id/menu_share_qrcode"
        android:title="@string/menu_share_qrcode"
        android:icon="@drawable/qr_code_2_24" />
    <item
        android:id="@+id/menu_share_cup"
        android:title="@string/menu_share_cup"
        android:icon="@drawable/local_cafe_24" />
    <item
        android:id="@+id/menu_share_wpt"
        android:title="@string/menu_share_wpt"
        android:icon="@drawable/route_24" />
</menu>